<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <fragment
        android:id="@+id/splashFragment"
        android:name="com.example.kreedapreranascout.ui.auth.SplashFragment"
        android:label="Splash"
        tools:layout="@layout/fragment_splash">
        <action
            android:id="@+id/action_splash_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_splash_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.example.kreedapreranascout.ui.auth.LoginFragment"
        android:label="Login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_login_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.example.kreedapreranascout.ui.auth.RegisterFragment"
        android:label="Register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_register_to_dashboard"
            app:destination="@id/dashboardFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.example.kreedapreranascout.ui.dashboard.DashboardFragment"
        android:label="Dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboard_to_studentList"
            app:destination="@id/studentListFragment" />
        <action
            android:id="@+id/action_dashboard_to_addStudent"
            app:destination="@id/addStudentFragment" />
        <action
            android:id="@+id/action_dashboard_to_batchStudent"
            app:destination="@id/batchStudentFragment" />
        <action
            android:id="@+id/action_dashboard_to_leaderboard"
            app:destination="@id/leaderboardFragment" />
        <action
            android:id="@+id/action_dashboard_to_settings"
            app:destination="@id/settingsFragment" />
    </fragment>

    <fragment
        android:id="@+id/studentListFragment"
        android:name="com.example.kreedapreranascout.ui.student.StudentListFragment"
        android:label="@string/athlete_list"
        tools:layout="@layout/fragment_student_list">
        <action
            android:id="@+id/action_studentList_to_studentProfile"
            app:destination="@id/studentProfileFragment" />
        <action
            android:id="@+id/action_studentList_to_addStudent"
            app:destination="@id/addStudentFragment" />
    </fragment>

    <fragment
        android:id="@+id/studentProfileFragment"
        android:name="com.example.kreedapreranascout.ui.student.StudentProfileFragment"
        android:label="@string/athlete_profile"
        tools:layout="@layout/fragment_student_profile">
        <argument
            android:name="studentId"
            app:argType="long" />
        <action
            android:id="@+id/action_studentProfile_to_trialLogger"
            app:destination="@id/trialLoggerFragment" />
        <action
            android:id="@+id/action_studentProfile_to_talentCurve"
            app:destination="@id/talentCurveFragment" />
    </fragment>

    <fragment
        android:id="@+id/addStudentFragment"
        android:name="com.example.kreedapreranascout.ui.student.AddStudentFragment"
        android:label="@string/add_new_athlete"
        tools:layout="@layout/fragment_add_student">
        <argument
            android:name="studentId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>

    <fragment
        android:id="@+id/batchStudentFragment"
        android:name="com.example.kreedapreranascout.ui.student.BatchStudentFragment"
        android:label="@string/batch_athlete_entry"
        tools:layout="@layout/fragment_batch_student" />

    <fragment
        android:id="@+id/trialLoggerFragment"
        android:name="com.example.kreedapreranascout.ui.performance.TrialLoggerFragment"
        android:label="Trial Logger"
        tools:layout="@layout/fragment_trial_logger">
        <argument
            android:name="studentId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/leaderboardFragment"
        android:name="com.example.kreedapreranascout.ui.leaderboard.LeaderboardFragment"
        android:label="Leaderboard"
        tools:layout="@layout/fragment_leaderboard" />

    <fragment
        android:id="@+id/talentCurveFragment"
        android:name="com.example.kreedapreranascout.ui.talent.TalentCurveFragment"
        android:label="Talent Curve"
        tools:layout="@layout/fragment_talent_curve">
        <argument
            android:name="studentId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.kreedapreranascout.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation>
